<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_myhangouts"
        android:icon="@drawable/calendar"
        android:title="@string/title_myhangouts" />
    <item
        android:id="@+id/navigation_addhangout"
        android:icon="@drawable/plus"
        android:title="@string/title_addhangout" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/bell"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

</menu>
